Added Change Author and Quote Functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="http://www.google.com/s2/u/0/favicons?domain=Jacinta.design" type="image/x-icon">
+    <link rel="shortcut icon" href="http://www.google.com/s2/u/0/favicons?domain=jacinto.design" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <link rel="stylesheet" href="CSS/styles.css">
     <title>Random Quote Generator</title>
@@ -13,11 +13,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+            <span id="quote"></span>
         </div>
         <!-- Authors -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="buttons-container">
