Add button functionality

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote"></span>
+            <span id="quote">Default</span>
         </div>
         <!-- Authors -->
         <div class="quote-author">
-            <span id="author"></span>
+            <span id="author">Default</span>
         </div>
         <!-- Buttons -->
         <div class="buttons-container">
